--- a/application/views/scripts/books/index.phtml
+++ b/application/views/scripts/books/index.phtml
@@ -1,9 +1,10 @@
 <?php
 
-$this->headTitle($this->sitemapPage['title'])
+$this->headTitle($this->sitemapPage['title']);
+$books = $this->books;
 
 ?>
-        <main>
+        <main class="bookMain">
 
             <ol class="breadcrumb text-center">
                 <li><a href="#">Home</a></li>
@@ -111,24 +112,39 @@ $this->headTitle($this->sitemapPage['title'])
             <!--******************************************
                             MAIN BESTSELLERS START
              ******************************************-->
-            <div class="container">
-                <div class="bestsellers clearfix text-center">
-                    <h2>Books for Subjects</h2>
-                    <div class="arrowRight">
-                        <p class="text-center"><a href="#">See all <span class="fa fa-arrow-right"></span></a></p>
-                    </div>
-                    <?php foreach($this->books as $book) {?>
-                    <div class="books">
-                        <figure class="center-block">
-                            <a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
-                        </figure>
-                        <h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
-                        <p><span class="by">by</span> Stephen King</p>
-                        <p class="prise center-block"><?php echo $this->escape($book['price']). '.00';?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
-                    </div>
-                    <?php }?>
-                </div>
-            </div>
+			<?php 
+				foreach($this->categories as $category) {
+					if(count($books[$category['id']]) > 0){
+						?>
+
+							<div class="container">
+								<div class="bestsellers clearfix text-center">
+									<h2><?php echo $this->escape($category['title']);?></h2>
+									<div class="arrowRight">
+										<p class="text-center"><a href="#">See all <span class="fa fa-arrow-right"></span></a></p>
+									</div>
+									<?php 
+										foreach($books[$category['id']] as $book) {	
+											?>
+												<div class="books">
+													<figure class="center-block">
+														<a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
+													</figure>
+													<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
+													<p><span class="by">by</span> Stephen King</p>
+													<p class="prise center-block"><?php echo $this->escape($book['price']);?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
+												</div>
+											<?php
+										}
+									?>
+								</div>
+							</div>
+			
+						<?php
+					}
+
+				}
+			?>
                     
                     
 
