--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -162,24 +162,7 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                            <ul class="nav navbar-nav">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Books<span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Drama</a></li>
-                                        <li><a href="#">Comedy</a></li>
-                                        <li><a href="#">Thriler</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Textbooks</a></li>
-                                <li><a href="#">Noot Books</a></li>
-                                <li><a href="#">Audiobooks</a></li>
-                                <li><a href="#">Magazines</a></li>
-                                <li><a href="#">Movies</a></li>
-                                <li><a href="#">Music</a></li>
-                                <li><a href="#">Games</a></li>
-
-                            </ul>
+                            <?php echo $this->topMenuHtml() ;?>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.container-fluid -->
                 </nav>
