--- a/application/views/scripts/about/index.phtml
+++ b/application/views/scripts/about/index.phtml
@@ -1,96 +1,3 @@
-<!--******************************************
-                        MAIN START
-        *******************************************-->
-        <main>
-            <ol class="breadcrumb text-center">
-                <li><a href="#">Home</a></li>
-                <li><b>About</b></li>
-            </ol>
-            <div class="container">
-                <div class="main-img">
-                    <img src="/front/img/aboutUs.png" alt="" class="img-responsive center-block">
-                </div>
+<?php
 
-                <div class="text-center">
-                    <h3 class="titleAbout">Sed ut perspiciatis unde omnis iste natus error sit 
-                        voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore </h3>
-                </div>
-
-                <div class="modernDesign">
-                    <h4 class="text-center">Welcome to the best in modern design</h4>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <article>
-                                <p>Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore </p>
-                                <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
-                                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-                            </article>
-                        </div>
-                        <div class="col-sm-6">
-                            <article>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? </p>
-                                <img src="/front/img/aboutUs-smal.png" alt="BookStore" class="img-responsive center-block">
-                            </article>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="modernDesign confidance">
-                    <h4 class="text-center">Shop with Confidance</h4>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <article>
-                                <p>Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore </p>
-                                <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolo</p>
-                            </article>
-                        </div>
-                        <div class="col-sm-6">
-                            <article>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? </p>
-
-                            </article>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <section class="contactForm">
-                <div class="container">
-                    <h2 class="text-center">Contact Us</h2>
-                    <form id="form" data-toggle="validator" role="form">
-                        <div class="form-group">                          
-                            <label for="exampleInputEmail1">Ime</label>
-                            <input type="text" class="form-control" pattern="^[_A-z]{1,}$" placeholder="Please enter your name" required required data-error="Unesite Vase ime">
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Email</label>
-                            <input type="email" class="form-control"  placeholder="Please enter valid mail" required required required data-error="Unesite ispravnu email adresu">
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Subject</label>
-                            <input type="text" class="form-control"  placeholder="">
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" placeholder="Please write some text"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-warning center-block">Posalji</button>
-                    </form>
-                </div>
-            </section>
-
-            <section class="maps">
-                <div class="container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18547.41065443684!2d20.415602186489288!3d44.82780028264034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssr!2srs!4v1470131468369" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </section>
-
-
-        </main>
-        <!--******************************************
-        **********************************************
-                            MAIN END
-        *********************************************
-        *********************************************-->
+echo $this->sitemapPage['body'];
