--- a/application/views/scripts/admin/authors/add.phtml
+++ b/application/views/scripts/admin/authors/add.phtml
@@ -35,48 +35,22 @@ $form->setElementDecorators(array('ViewHelper'));
 
                         <!-- Text input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="first_name">First Name</label>  
+                            <label class="col-md-4 control-label" for="name">Name</label>  
                             <div class="col-md-4">
                                 <?php
                                 echo $form->getElement('first_name')->setAttribs(array(
                                     'class' => 'form-control input-md',
-                                    'placeholder' => 'enter author\'s first name',
-                                    'id' => 'first_name',
+                                    'placeholder' => 'enter author\'s name',
+                                    'id' => 'name',
                                     'required' => 'required'
                                 ));
                                 ?>
                                 <span class="help-block">min 3, max 255 characters</span>  
                             </div>
                             <div class="col-md-4">
-                                <?php if ($form->getElement('first_name')->hasErrors()) { ?>
+                                <?php if ($form->getElement('name')->hasErrors()) { ?>
                                     <div class="has-error">
-                                        <?php foreach ($form->getElement('first_name')->getMessages() as $message) { ?>
-                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
-                                        <?php } ?>
-                                    </div>
-                                <?php } ?>
-                            </div>
-                        </div>
-                        
-
-                        <!-- Text input-->
-                        <div class="form-group">
-                            <label class="col-md-4 control-label" for="last_name">Last Name</label>  
-                            <div class="col-md-4">
-                                <?php
-                                echo $form->getElement('last_name')->setAttribs(array(
-                                    'class' => 'form-control input-md',
-                                    'placeholder' => 'enter author\'s last name',
-                                    'id' => 'last_name',
-                                    'required' => 'required',
-                                ));
-                                ?>
-                                <span class="help-block">min 3, max 255 characters</span>  
-                            </div>
-                            <div class="col-md-4">
-                                <?php if ($form->getElement('last_name')->hasErrors()) { ?>
-                                    <div class="has-error">
-                                        <?php foreach ($form->getElement('last_name')->getMessages() as $message) { ?>
+                                        <?php foreach ($form->getElement('name')->getMessages() as $message) { ?>
                                             <p class="help-block"><?php echo $this->escape($message); ?></p>
                                         <?php } ?>
                                     </div>
