--- a/application/views/scripts/admin/authors/index.phtml
+++ b/application/views/scripts/admin/authors/index.phtml
@@ -29,8 +29,7 @@ $this->headTitle('Authors');
                             <th></th>
                             <th class="text-center">Img</th>
                             <th class="text-center">Status</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
+                            <th>Name</th>
                             <th>About</th>
                             <th class="text-center">#</th>
                         </tr>
@@ -44,8 +43,7 @@ $this->headTitle('Authors');
                                     <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
                                     <td class="text-center"><img style="max-height: 50px;" src="<?php echo $this->authorImgUrl($author); ?>"></td>
                                     <td class="text-center"><span class="badge alert-success" title="enabled"><i class="glyphicon glyphicon-ok"></i></span></td>
-                                    <td><?php echo $this->escape($author['first_name']); ?></td>
-                                    <td class="text-center"><?php echo $this->escape($author['last_name']); ?></td>
+                                    <td><?php echo $this->escape($author['name']); ?></td>
                                     <td><?php echo $this->escape($author['about']); ?></td>
                                     <td width="10%" class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="...">
@@ -68,8 +66,7 @@ $this->headTitle('Authors');
                                     <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
                                     <td class="text-center"><img style="max-height: 24px;" src="<?php echo $this->authorImgUrl($author); ?>"></td>
                                     <td class="text-center"><span class="badge alert-danger" title="disabled"><i class="glyphicon glyphicon-remove"></i></span></td>
-                                    <td><?php echo $this->escape($author['first_name']); ?></td>
-                                    <td class="text-center"><?php echo $this->escape($author['last_name']); ?></td>
+                                    <td><?php echo $this->escape($author['name']); ?></td>
                                     <td><?php echo $this->escape($author['about']); ?></td>
                                     <td class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="...">
